--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -28,13 +28,17 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: dist-file
-          path: |
-            dist
-            package.json
+          name: dist-files
+          path: dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - name: Get buil artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Output contents
+        run: ls -l
       - name: Deploy
         run: echo "Deploying..."
